<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:textDirection="rtl" android:layout_gravity="right"

    android:layout_height="match_parent"   tools:context=".MainActivity">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
android:gravity="center"
        android:background="@color/whiteback"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ChannelInfo"
android:layoutDirection="rtl"
            android:background="@color/whitebackground"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">
            <LinearLayout
                android:layout_marginBottom="2dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:paddingBottom="4dp"
                android:gravity="center"
                android:background="@color/customeblue"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingLeft="6dp">

                <WebView
                    android:layout_width="80px"
                    android:layout_height="80px"

                    android:id="@+id/webView2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/txtflollower"
                    android:layout_weight="0" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:paddingTop="1dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="channel name"

                        android:id="@+id/txtnamefollowers"
                        android:layout_alignParentTop="true"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:background="@color/customeblue"
                        android:layout_toLeftOf="@+id/webView2"
                        android:layout_toRightOf="@+id/bufolowSubscrible"
                        android:layout_toEndOf="@+id/bufolowSubscrible"
                        android:paddingBottom="1dp"
                        android:textSize="14dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="subscribers"
                        android:id="@+id/txtflollower"
                        android:layout_below="@+id/txtnamefollowers"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:layout_alignRight="@+id/txtnamefollowers"
                        android:layout_alignEnd="@+id/txtnamefollowers"
                        android:layout_alignBottom="@+id/bufolowSubscrible"
                        android:layout_toRightOf="@+id/bufolowSubscrible"
                        android:layout_toEndOf="@+id/bufolowSubscrible"
                        android:background="@color/customeblue"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="8dp"
                        android:paddingBottom="5dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <Button
                    android:layout_width="165px"
                    android:layout_height="40dp"
                    android:text="@string/Unfolow"
                    android:id="@+id/bufolowSubscrible"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/barcolor"
                    android:drawableRight="@drawable/add"
                    android:paddingRight="5dp"
                    android:textSize="10dp"
                    android:textColor="#fdfffa"
                    android:layout_weight="0" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:background="@color/whitebackground"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ListView

                android:background="@color/whitebackground"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/LVNews"

                android:divider="@color/whitebackground"
                android:dividerHeight="9dp"
                android:layout_weight="1" />

            <Button
                android:background="@drawable/background_new_news"
                android:id="@+id/bunewNewsComming"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="13dp"
                android:textColor="#040404"
                android:textAlignment="textStart"

                android:text="@string/newnews"
                android:drawableRight="@drawable/upirrow"

                android:visibility="visible"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="false"
                android:onClick="bunewnews" />
        </RelativeLayout>

        <LinearLayout
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:background="@color/whiteback"
            android:layout_weight="0"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/myresources"
                android:id="@+id/buadd"
                android:drawableRight="@drawable/anamadd"
                android:drawablePadding="8dp"
                android:layout_weight="1"
                android:textSize="12dp"
                android:textColor="@color/darkblue"
                android:textAlignment="textStart"
                android:onClick="onadd"
                android:textStyle="bold"
                android:background="@color/whiteback" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/ajala"
                android:id="@+id/bunewsa"
                android:drawableRight="@drawable/anamnewsa"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:onClick="buajala"
                android:textSize="12dp"
                android:textColor="@color/darkblue"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:background="@color/whiteback" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/viedo"
                android:id="@+id/bulogotype"
                android:drawableRight="@drawable/anamlogotype"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:onClick="buyoutube"
                android:textSize="12dp"
                android:textColor="@color/darkblue"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:background="@color/whiteback" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/news"
                android:id="@+id/buhome"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/anamhome"
                android:layout_weight="1"
                android:onClick="bunews"
                android:textSize="12dp"
                android:textColor="@color/darkblue"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:background="@color/whiteback" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
